changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make pets using ranged weapons work correctly on tiled maps.
Make pets using skills work correctly on tiled maps.
Make pet movement work correctly on tiled maps.
Andreas Kirschbaum 2009-06-14

Rewrite loops iterating over inv/env/below/above object lists with macros
that are not affected by objects being modified/removed/freed within the
loop.
Andreas Kirschbaum 2009-06-13

Apply patch by Dany Talbot fixing #1990214 (2.0 godenchant bug?).
Andreas Kirschbaum 2009-06-10

Fix #1961814 (scripting failing to drop items). Also fixes "drop 1 cauldron"
command.
Andreas Kirschbaum 2009-06-10

Fix rod generation: make sure it can hold enough spell points. Now all light
rods get spell points for 3 changes, heavy rods for 6 charges.
Andreas Kirschbaum 2009-06-10

Merge HORNs (type 35) into RODs (type 3).
Andreas Kirschbaum 2009-06-10

Fix monsters not using wands/staffs/rods.
Andreas Kirschbaum 2009-06-09

Remove support for obsolete attributes can_use_rod, can_use_wand, and
can_use_horn. These attributes have been read/written from/to map files but
not used for anything.
Andreas Kirschbaum 2009-06-09

include/shared: Add as a non-external directory.
include/shared/newclient.h: Added client/trunk/common/shared/newclient.h
  revision 11674 to transfer control of newclient.h from client area to
  server area.
include/shared/README: Add a file with a brief note stating that the client
  references the files in this directory using an SVN external property.
Kevin Bulgrien 2009-05-09

include: After advice of Ragnor against svn:externals without -r, deleted the