@@ -14,6 +14,8 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Do not change monster's enemy from pet to player whenever the player's pet
+attacks the monster.
 Make pets using ranged weapons work correctly on tiled maps.
 Make pets using skills work correctly on tiled maps.
 Make pet movement work correctly on tiled maps.
